<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.bitgo</groupId>
  <artifactId>wasm-privacy-coin</artifactId>
  <version>${revision}${changelist}</version>
  <packaging>jar</packaging>

  <description>WASM module for shielded merkle tree operations</description>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <revision>0.1.0</revision>
    <changelist>-SNAPSHOT</changelist>
  </properties>

  <dependencies>
    <!-- Chicory: pure-JVM WASM runtime, no native/JNI dependency -->
    <dependency>
      <groupId>com.dylibso.chicory</groupId>
      <artifactId>runtime</artifactId>
      <version>1.1.1</version>
    </dependency>

    <!-- Protobuf runtime for reading/writing proto messages -->
    <dependency>
      <groupId>com.google.protobuf</groupId>
      <artifactId>protobuf-java</artifactId>
      <version>4.29.3</version>
    </dependency>

    <!-- Test -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.10.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.17.0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub BitGo Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/BitGo/BitGoWASM</url>
    </repository>
  </distributionManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.3.1</version>
      </plugin>
      <!-- protobuf-maven-plugin: downloads protoc automatically and generates Java sources -->
      <plugin>
        <groupId>io.github.ascopes</groupId>
        <artifactId>protobuf-maven-plugin</artifactId>
        <version>2.6.0</version>
        <configuration>
          <protocVersion>4.29.3</protocVersion>
          <sourceDirectories>
            <sourceDirectory>${project.basedir}/proto</sourceDirectory>
          </sourceDirectories>
        </configuration>
        <executions>
          <execution>
            <goals><goal>generate</goal></goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
